@@ -107,6 +107,7 @@ The following bugs are resolved with this release:
   [33185] Fix double-free after allocation failure in regcomp
   [32483] ctype macros segfault in multithreaded programs with multiple libc.so
   [33234] Use TLS initial-exec model for __libc_tsd_CTYPE_* thread variables
+  [33361] nss: Group merge does not react to ERANGE during merge
 
 Version 2.39
 
